# Computer-Mathematics

./: CMakeLists.txt  README.md  main.cpp  operations.h
hashtable/: table.cpp  table.h
tools/: conversions.cpp  conversions.h  exceptions.h
